hphp/hack/test/typecheck/control_flow/do_while_finally2.php.exp
File "do_while_finally2.php", line 9, characters 20-21:
Invalid argument (Typing[4110])
  File "do_while_finally2.php", line 14, characters 23-28:
  Expected `string`
  File "do_while_finally2.php", line 6, characters 10-10:
  But got `int`
